   ambiguous anymore).

Changes
=======

 - Upgraded Elasticsearch to v5.5.2.

 - Added new tab in Enterprise Edition of the Admin UI to display users
   and their privileges.

 - The documentation link in the Admin UI now points to the documentation
   for the major.minor (e.g. 2.1) version of CrateDB, instead of
   major.minor.hotfix (e.g. 2.1.1).

 - Added node cluster check for cluster-name folder in data path directory.

 - Update Crash to ``0.22.1`` which includes the following changes:

    - Added a status toolbar that prints the current session info.

    - Start autocompletion for non-command keys at the 3rd character.

 - Change semantics of ``IN`` operator to behave like ``= ANY``. The argument
   list for ``IN`` now has to be comprised of the same type. For example,
   this is now an illegal ``IN`` query because the list mixes integer and
   double type::

     Select * from t1 where id IN (1, 1.2, 2)

   This would get translated into the following and throw an error::

     Select * from t1 where id = ANY([1, 1.2, 3])

 - Introduce support for single column subselects in `ANY` and `IN`, e.g.::

     Select * from t1 where id = ANY(select id from t2)
     Select * from t1 where id IN (select id from t2)

 - Improved resiliency of the table rename operation.

 - Relaxed column naming restrictions.

 - Improved resiliency of drop, close and open table operations

 - Added empty tables `KEY_COLUMN_USAGE` and `REFERENTIAL_CONSTRAINTS` to
  `INFORMATION_SCHEMA` to be more compliant with the SQL99 standard.

Fixes
=====

 - Fixed an issue when using GRANT/REVOKE/DENY statements on a table with a
   custom schema set. The statements would result in permission changed on the
   default ``doc`` schema.

 - Fixed an issue with ``INNER`` and ``CROSS JOINS`` on more than 2 tables that
   could result in a ``Iterator is not on a row`` error.

 - Fixed empty ``account_user``-column in twitter tutorial plugin of the Admin UI.